--- a/wsn/app/templates/news.html
+++ b/wsn/app/templates/news.html
@@ -28,13 +28,13 @@
                 <div class="main_nav">
                   <ul style = "margin:0px;">
                     <li><a href="/" >首页</a></li>
-                    <li ><a href="/news_list?news_type=101">基地概况</a></li>
-                    <li><a href="/news_list?news_type=201">动态新闻</a></li>
-                    <li><a href="/news_list?news_type=202">通知公告</a></li>
-                    <li><a href="/instruments_list?news_type=301">观测设备</a></li>
-                    <li><a href="/news_list?news_type=401">服务流程</a></li>
+                    <li ><a href="/news_list?news_type=11">基地概况</a></li>
+                    <li><a href="/news_list?news_type=21">动态新闻</a></li>
+                    <li><a href="/news_list?news_type=22">通知公告</a></li>
+                    <li><a href="/instruments_list?news_type=31">观测设备</a></li>
+                    <li><a href="/news_list?news_type=41">服务流程</a></li>
                     <li onmouseover="showMenu(6)" onmouseout="hiddenMenu(6)"><a href="javascript:void(0);">政策法规</a></li>
-                    <li><a href="/news_list?news_type=601">常用下载</a></li>
+                    <li><a href="/news_list?news_type=61">常用下载</a></li>
                     <li onmouseover="showMenu(8)" onmouseout="hiddenMenu(8)"><a href="javascript:void(0);">数据观测</a></li>
 
                   </ul>
@@ -45,10 +45,10 @@
                         onmouseover="showMenu(6)" onmouseout="hiddenMenu(6)">
                       <div class="submenu">
                         <ul>
-                          <li><a href="/news_list?news_type=501">国家标准</a></li>
-                         <li><a href="/news_list?news_type=502">行业标准</a></li>
-                         <li><a href="/news_list?news_type=503">国际标准</a></li>
-                         <li><a href="/news_list?news_type=504">其他标准</a></li>
+                          <li><a href="/news_list?news_type=51">国家标准</a></li>
+                         <li><a href="/news_list?news_type=52">行业标准</a></li>
+                         <li><a href="/news_list?news_type=53">国际标准</a></li>
+                         <li><a href="/news_list?news_type=54">其他标准</a></li>
                         </ul>
                       </div>
                     </div>
@@ -104,7 +104,7 @@
                     <div class = "news-content-title">{{news.news_title}}</div>
                     <div class = "news-content-time">发布时间：{{news.news_update_time}} &nbsp;&nbsp; 发布人：
                         {{news.news_author.admin_username}}&nbsp;&nbsp;阅读人次：{{ news.news_readtime }}</div>
-                    <div class = "news-content-detail">{{news.news_content}}</div>
+                    <div class = "news-content-detail">{% autoescape off %}{{ news.news_content }}{% endautoescape %}</div>
                 </div>
                 <div class="clearfix"></div>
             </div>
