--- a/wsn/app/templates/news_list.html
+++ b/wsn/app/templates/news_list.html
@@ -212,7 +212,12 @@
             </div>
             <div class="clearfix"></div>
         </div>
-        <jsp:include page="/site_media/footer.jsp" flush="false" />
+            <div class="footer">
+                <div class="bottom margin12 wrap">
+                    Copyright ©2014-2014 池州市童子岭观测点 <br>
+                    联系方式：<a href="mailto:929034478@qq.com" target="_blank">技术支持邮箱</a>  &nbsp;&nbsp;&nbsp;<a href="adminlogin.jsp" target="_blank">管理入口</a>
+                </div>
+            </div>
         </div>
 
     </body>
