select 30 items for the month

--- a/wsn/app/templates/air.html
+++ b/wsn/app/templates/air.html
@@ -65,7 +65,7 @@
                             plotShadow: false
                         },
                         title: {
-                            text: 'Browser market shares at a specific website, 2010'
+                            text: '最近一月风向分布图'
                         },
                         tooltip: {
                             pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
