--- a/wsn/app/templates/air.html
+++ b/wsn/app/templates/air.html
@@ -205,7 +205,7 @@
                         onmouseover="showMenu(8)" onmouseout="hiddenMenu(8)">
                       <div class="submenu">
                         <ul>
-                          <li><a href="GetMainAir">环境监测</a></li>
+                          <li><a href="/air">环境监测</a></li>
                          <li><a href="GetTodayTem?name=童子岭">温度监测</a></li>
                          <li><a href="GetMainWater">水质监测</a></li>
             <!--  			 <li><a href="GetMainAir">森林监测</a></li>-->
