--- a/wsn/app/templates/index.html
+++ b/wsn/app/templates/index.html
@@ -175,11 +175,11 @@ border-bottom: 1px solid #ddd;
                         onmouseover="showMenu(8)" onmouseout="hiddenMenu(8)">
                       <div class="submenu">
                         <ul>
-                          <li><a href="GetMainAir">环境监测</a></li>
-                         <li><a href="GetTodayTem?name=童子岭">温度监测</a></li>
-                         <li><a href="GetMainWater">水质监测</a></li>
+                            <li><a href="/air">环境监测</a></li>
+                            <li><a href="GetTodayTem?name=童子岭">温度监测</a></li>
+                            <li><a href="GetMainWater">水质监测</a></li>
             <!--  			 <li><a href="GetMainAir">森林监测</a></li>-->
-                         <li><a href="GetArcticData?item=voltage">北极数据测试</a></li>
+                            <li><a href="GetArcticData?item=voltage">北极数据测试</a></li>
                         </ul>
                       </div>
                     </div>
