--- a/wsn/app/templates/water.html
+++ b/wsn/app/templates/water.html
@@ -63,11 +63,11 @@
                                 load: function() {
                                     // set up the updating of the chart each second
                                     var series = this.series[0];
-{#                                    setInterval(function() {#}
-{#                                        var x = (new Date()).getTime(), // current time#}
-{#                                            y = Math.random();#}
-{#                                        series.addPoint([x, y], true, true);#}
-{#                                    }, 1000);#}
+                                    setInterval(function() {
+                                        var x = (new Date()).getTime(), // current time
+                                            y = Math.random();
+                                        series.addPoint([x, y], true, true);
+                                    }, 1000);
                                 }
                             }
                         },
