--- a/wsn/app/templates/admin/admin_login.html
+++ b/wsn/app/templates/admin/admin_login.html
@@ -17,7 +17,7 @@
 		type: 'post',
 		success: function(data) {
 			if(data == 'success') {
-				window.location.href = 'managenews.jsp';
+				window.location.href = 'admin_news/';
 			} else {
 				alert('用户名不存在或密码错误');
 			}
