--- a/wsn/app/templates/water.html
+++ b/wsn/app/templates/water.html
@@ -205,6 +205,9 @@
                 </p>
 				<div class="clear"></div>
                 <div id="container" style="min-width:700px;height:400px"></div>
+                <div style="float: right;">
+                    导出选项：<a href="/get_excel?data_type=water"><img src="/site_media/images/Excel_16px.png"><span>Excel</span></a>
+                </div>
 			</div>
 		</div>
 		<div>
