--- a/wsn/app/templates/air.html
+++ b/wsn/app/templates/air.html
@@ -233,6 +233,10 @@
                 </p>
 				<div class="clear"></div>
                 <div id="container" style="min-width:700px;height:400px"></div>
+                <div style="float: right;">
+                    导出选项：<a href="/get_excel?data_type=air"><img src="/site_media/images/Excel_16px.png"><span>Excel</span></a>
+                </div>
+
 			</div>
 		</div>
 		<div>
